# dpartion-nips2018

./: .gitignore  README.md
docs/superpowers/plans/: 2026-04-14-expand-ot-tests.md  2026-04-14-polish-and-random-mass.md
docs/superpowers/specs/: 2026-04-14-ot-test-expansion-design.md
gurobi_solver/: benchmark_gurobi.py  bipartite.py  output_benchmark_gurobi.txt  tripartite.py
improved_sinkhorn/: benchmark_optimized_sinkhorn.txt  myFS.m  myFSscript.m
matlab/: myFSscript.m
network_simplex_lemon/: CMakeLists.txt  README.md  benchmark_network_simplex_lemon.txt  bipartite.h  hello_lemon  hello_lemon.cc  main.cpp  ot_test.cpp  tripartite.h
ortools/: benchmark_ortools.py  benchmark_ortools.txt  bipartite.py  tripartite.py
sinkhorn/: benchmarkSinkhorn.m  benchmark_sinkhorn.txt  sinkhornTransport.m
